--- a/SDKVideoPlayer/en.lproj/Localizable.strings
+++ b/SDKVideoPlayer/en.lproj/Localizable.strings
@@ -5,7 +5,7 @@
   Created by Zeus on 2024/7/23.
   
 */
-"appName"="搜球吧";
+"appName"="SEARCH BALL";
 "speed"="Speed";
 "mybrowserecord"="My browsing history";
 "Service_agreement"="Service agreement";
@@ -39,3 +39,4 @@
 "ClickPlay"="Click Play";
 "dataexception"="Network Exception";
 "dataretry"="Click Retry";
+"more"="more";
