--- a/SDKVideoPlayer/mul.lproj/Home.xcstrings
+++ b/SDKVideoPlayer/mul.lproj/Home.xcstrings
@@ -140,7 +140,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Import url or keywords"
+            "value" : "Please input keyword"
           }
         },
         "zh-Hans" : {
