--- a/SDKVideoPlayer/en.lproj/Localizable.strings
+++ b/SDKVideoPlayer/en.lproj/Localizable.strings
@@ -5,7 +5,7 @@
   Created by Zeus on 2024/7/23.
   
 */
-"appName"="SEARCH BALL";
+"appName"="Search ball browser";
 "speed"="Speed";
 "mybrowserecord"="My browsing history";
 "Service_agreement"="Service agreement";
