--- a/SDKVideoPlayer/zh-Hant.lproj/Localizable.strings
+++ b/SDKVideoPlayer/zh-Hant.lproj/Localizable.strings
@@ -5,7 +5,7 @@
   Created by Zeus on 2024/7/23.
   
 */
-"appName"="搜球吧";
+"appName"="Search ball browser";
 "speed"="播放速度";
 "mybrowserecord"="我的浏览记录";
 "Service_agreement"="服务协议";
